src/test/deca/syntax/valid/created/testOpArith/multiplePlus.deca
// Description :
//    Initialisation d'une variable avec une somme
//
// Résultats :
//    ok


{
    int somme = 1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + 10 + 0;
}


