src/test/deca/syntax/invalid/created/RecognitionErrors/toZeroFloat.deca
// Description :
//    Test invalide : Initialisation d'une variable float avec un nombre trop petit
//
// Résultats :
//    Erreur syntaxique
//    Ligne 9: InvalidValueException: Float too small

{
    float x = 0.0000000000000000000000000000000000000000000000000001; // Ligne 4: InvalidValueException: Float value is too small to be represented.
}
